feat(observability): add some service to improve logs, metrics and tracings

--- a/.env.docker
+++ b/.env.docker
@@ -5,6 +5,11 @@ DB_DATABASE=teddy_core
 DB_USERNAME=teddy
 DB_PASSWORD=password
 NODE_ENV=local
+PORT=4000
 
 JWT_SECRET=secret
 JWT_EXPIRES_IN=1d
+
+LOKI_URL=http://loki:3100
+PROMETHEUS_URL=http://prometheus:9090
+JAEGER_URL=http://jaeger:14268
