--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 NODE_ENV=
+PORT=
 
 JWT_SECRET=
 JWT_EXPIRES_IN=
+
+LOKI_URL=
+PROMETHEUS_URL=
+JAEGER_URL=
