--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "prom-client": "^15.1.3",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
@@ -62,6 +63,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
