feat(notification): add RabbitMQ and BullMQ to handle user notifications

--- a/.env.docker
+++ b/.env.docker
@@ -14,3 +14,5 @@ LOKI_URL=http://loki:3100
 PROMETHEUS_URL=http://prometheus:9090
 
 REDIS_URL=redis://redis:6379
+
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
