docs: update readme

--- a/.env.docker
+++ b/.env.docker
@@ -1,8 +1,8 @@
 DB_HOST_READ_WRITE=postgres
 DB_HOST_READ_ONLY=postgres
 DB_PORT=5432
-DB_DATABASE=teddy_core
-DB_USERNAME=teddy
+DB_DATABASE=th_core
+DB_USERNAME=th
 DB_PASSWORD=password
 NODE_ENV=local
 PORT=4000
