--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: teddy-backoffice-api
+    container_name: th-backoffice-api
     ports:
       - "4000:4000"
     depends_on:
@@ -27,19 +27,19 @@ services:
 
   postgres:
     image: postgres:16-alpine
-    container_name: teddy-postgres
+    container_name: th-postgres
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=teddy
+      - POSTGRES_USER=th
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=teddy_core
+      - POSTGRES_DB=th_core
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   loki:
     image: grafana/loki:latest
-    container_name: teddy-loki
+    container_name: th-loki
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -55,7 +55,7 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: teddy-prometheus
+    container_name: th-prometheus
     ports:
       - "9090:9090"
     volumes:
@@ -64,7 +64,7 @@ services:
 
   grafana:
     image: grafana/grafana:latest
-    container_name: teddy-grafana
+    container_name: th-grafana
     ports:
       - "3001:3000"
     depends_on:
@@ -79,7 +79,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: teddy-redis
+    container_name: th-redis
     ports:
       - "6379:6379"
     volumes:
@@ -88,7 +88,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    container_name: teddy-rabbitmq
+    container_name: th-rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
